# cyber-oracle

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PRD.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260216_0001_create_users_table.py  20260217_0002_create_core_domain_tables.py  20260217_0003_add_password_reset_fields_to_users.py  20260218_0004_add_questions_user_idempotency_unique.py  20260219_0005_update_followups_for_threaded_asks.py  (+7 more)
backend/app/: ask_service.py  auth.py  config.py  db.py  email.py  launch.py  main.py  openai_constants.py  rate_limit.py  schemas.py  security.py  user_profile.py
backend/openai_integration/: input_files_manifest.json  openai_file_search_lib.py  openai_file_search_main.py  openai_input_files_uploader.py  openai_vector_store_builder.py
backend/scripts/: grant_launch_credits.py  sync_messenger_profile.py
backend/tests/: conftest.py  test_ask_auth.py  test_ask_credit_flow.py  test_auth_register_verify.py  test_config_security.py  test_core_schema.py  test_credit_endpoints.py  test_followup_ask_flow.py  test_history_endpoints.py  test_messenger_client.py  test_messenger_identity_model.py  test_messenger_profile_sync.py  test_messenger_webhook.py  test_openai_ask_pipeline.py  test_openai_file_search_lib.py  test_openai_file_search_main.py  test_openai_input_files_uploader.py  test_openai_vector_store_builder.py  test_orders_flow.py  test_user_profile_endpoints.py  test_user_schema.py
docs/: PRD.md  (+5 more)
(+61 files in other folders)
