[project]
name = "elin-backend"
version = "0.1.0"
description = "FastAPI backend for ELIN 神域引擎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "pwdlib>=0.2.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0"
]
